[gd_scene load_steps=11 format=3 uid="uid://c3w863swgslqe"]

[ext_resource type="Script" path="res://common/scripts/character_controller.gd" id="1_tnlc5"]
[ext_resource type="PackedScene" uid="uid://vuokdfgdnucn" path="res://common/pause_menu.tscn" id="2_q2khm"]
[ext_resource type="AudioStream" uid="uid://boqdx7can14oq" path="res://audio/grasswalk.ogg" id="3_0mvly"]
[ext_resource type="PackedScene" uid="uid://c6l2txqlf73ce" path="res://common/axe.tscn" id="3_md8f2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_61hv6"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5q0gg"]

[sub_resource type="QuadMesh" id="QuadMesh_uv4ub"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iqr4d"]
size = Vector3(0.0119934, 0.133205, 0.001)

[sub_resource type="Animation" id="Animation_6jela"]
resource_name = "walking"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_walk_sound"
}]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0.7, 0, 0.1, 1, 0, 0.73, 0, 0.2, 1, 0, 0.7, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pxt5"]
_data = {
"walking": SubResource("Animation_6jela")
}

[node name="CHARACTER" type="CharacterBody3D"]
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 0.349066
script = ExtResource("1_tnlc5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.96, 0, 0, 0, 0.96, 0, 0, 0, 0.96, 0, 0, 0)
shape = SubResource("CapsuleShape3D_61hv6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_5q0gg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="PauseMenu" parent="Camera3D" instance=ExtResource("2_q2khm")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Slicer" type="Node3D" parent="Camera3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0, -1.5)

[node name="Axe" parent="Camera3D/Slicer" instance=ExtResource("3_md8f2")]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D/Slicer"]
visible = false
mesh = SubResource("QuadMesh_uv4ub")

[node name="Area3D" type="Area3D" parent="Camera3D/Slicer"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/Slicer/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.264781, 0.0270138, 0.000354409)
shape = SubResource("BoxShape3D_iqr4d")

[node name="Audios" type="Node3D" parent="."]

[node name="GrassFootstep" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("3_0mvly")
volume_db = -8.0
pitch_scale = 1.25

[node name="AnimationPlayers" type="Node" parent="."]

[node name="WalkAnimation" type="AnimationPlayer" parent="AnimationPlayers"]
libraries = {
"": SubResource("AnimationLibrary_4pxt5")
}
